# dockapps

libdockapp/examples/basic/: Makefile
libdockapp/examples/rectangles/: Makefile
wmCalClock/: .gitignore  CHANGES  HINTS  INSTALL  Makefile.am  README  configure.ac
wmCalClock/Src/: Makefile.am  wmCalClock.1  wmCalClock.c  xutils.c
wmcube/wmcube/: wmcube.c
wmget/: configure.c  server.c
wmhdplop/: util.c  util.h  wmhdplop.c
wmmoonclock/src/: CalcEphem.c  CalcEphem.h  Moon.c  Moon.h  MoonRise.c  wmMoonClock.c
wmnet/: Imakefile  Makefile.am  README  configure.ac  drivers.c  wmnet.1x  wmnet.c  wmnet.h  wmnet.man
wmsun/: SunRise.c  wmsun.c
wmtime/: wmtime.c
